# merinpsVision

./: .dockerignore  .gitignore  1________WEAVEVISION_DRIFT_IMPLEMENTATION.md  3_________CURSOR_PROMPT_drift_lifecycle.md  CHANGELOG.md  Dockerfile.cpu  Dockerfile.cuda  LICENSE  Makefile  README.md  SKILLS.md  WEAVEVISION_CURSOR_MASTER_BUILD_SPEC.md  compose.gpu.yaml  compose.yaml  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
.cursor/rules/: weavevision.mdc
.github/workflows/: ci.yml  security.yml
.streamlit/: config.toml
configs/: app.yaml
configs/datasets/: aitex.yaml  company_template.yaml  fixture.yaml  mvtec_carpet.yaml  visa.yaml
configs/experiments/: benchmark_mvtec_carpet.yaml  robustness.yaml  smoke.yaml  smoke_efficientad.yaml
configs/models/: efficientad_challenger.yaml  padim_optional.yaml  patchcore_baseline.yaml
data/manifests/: weavevision_fixture.json
docs/: ARCHITECTURE.md  BLOCKERS.md  CLAIM_CONTRACT.md  COMPANY_PILOT_RUNBOOK.md  DATASET_AND_LICENSE_REGISTER.md  DRIFT_LIFECYCLE_TASKS.md  EXECUTION_LOG.md  EXPERIMENT_PROTOCOL.md  FINAL_VERDICT.md  MODEL_SELECTION_VERDICT.md  USER_GUIDE.md
notebooks/: 01_dataset_audit_and_eda.ipynb  02_patchcore_failure_analysis.ipynb  03_model_comparison.ipynb
scripts/: bootstrap.ps1  bootstrap.sh  download_visa.py  evaluate_fixture.py  generate_fixtures.py  gpu_patchcore_smoke.py  import_aitex.py  release_check.py  run_fixture_smoke.py  run_robustness_fixture.py  verify_mvtec.py
src/weavevision/: __init__.py  __main__.py  cli.py  logging_config.py  settings.py
src/weavevision/data/: __init__.py  audit.py  manifest.py  split.py  tiling.py  transforms.py
tests/: conftest.py
tests/contract/: test_cli.py  test_result_schema.py
tests/integration/: test_analysis_batch_reporting.py  test_dataset_adapter_feedback.py
tests/smoke/: test_gpu_oom.py  test_no_model_state.py
tests/unit/: test_active_learning.py  test_calibration_metrics.py  test_cli_drift.py  test_database.py  test_domain_drift_schemas.py  test_drift_persistence.py  test_drift_services.py  test_evaluation_extended.py  test_incident_triage.py  test_manifest.py  test_model_registry.py  test_models_extended.py  test_psi.py  test_quality_regions_overlay.py  test_registry_health_logging.py  test_safe_zip.py  test_settings.py  test_split_and_audit.py  test_tiling.py  test_trend_monitor.py
(+73 files in other folders)
